test/library/standard/Reflection/field-queries-error-string.good
field-queries-error-string.chpl:6: error: string is not a class, record, or union type
